--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       content="width=device-width, initial-scale=1"
       charset="UTF-8"
     />
-    <script src="src/index.js"></script>
+    <script src="src/index.js" defer></script>
   </head>
 
-  <body id="body"></body>
+  <body id="body">
+    <div id ="container" class ="container">
+  </body>
 </html>
